# unitree-go1-interface

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: params.yaml
data/: model.onnx  sac.onnx
include/unitree_go1_interface/: NNPolicy.hpp  Node.hpp
launch/: sim_to_sim.py
src/: NNPolicy.cpp  Node.cpp  main.cpp  my_node.cpp  robot_main.cpp
