<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_go1_interface</name>
  <version>0.0.0</version>
  <description>ROS packge for GO1 interface for mujoco-playground policies</description>
  <maintainer email="yarden.as@inf.ethz.ch">yarden</maintainer>
  <license>ETH Computational Robotics Lab</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>onnxruntime</build_depend>
  <build_depend>crl_unitree_go1</build_depend>
  <build_depend>crl_unitree_commons</build_depend>
  <build_depend>crl_unitree_simulator</build_depend>
  <exec_depend>onnxruntime</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>